public/k8s/apps/dashboard-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-frontend
  namespace: app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: 
    
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/16,192.168.0.0/24
    # IngressGroup: unify Ingress resources from multiple namespaces behind one ALB.
    alb.ingress.kubernetes.io/group.name: internal
    alb.ingress.kubernetes.io/group.order: "20"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dashboard-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-frontend
                port:
                  number: 80
